Wed Dec 26 12:32:31 2001  Owen Taylor  <otaylor@redhat.com>

	* docs/Changes-2.0.txt: Document the fact that
	gtk_paned_set_handle_size() has been removed.

	* gtk/gtkpaned.h Remove gtk_paned_handle_size() compat macro, 
	since it pointed to gtk_paned_set_handle_size(), which
	was removed. (#66760, Matt Wilson)

Wed Dec 26 12:28:24 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_highlight): Connect 
	gtk_drag_hightlight_expose _after_, so it works with
	widgets that paint there entire background. (#66735)

Wed Dec 26 12:17:06 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkplug.c (gtk_plug_size_allocate): Assign the
	allocation to widget->allocation. (Fixes #67290,
	Chris Phelps.)

Wed Dec 26 11:49:01 2001  Owen Taylor  <otaylor@redhat.com>

	(#67542, reported by Anders Carlsson)
	
	* gtk/gtkstyle.c (gtk_style_real_init_from_rc): Merge
	rc_style->font_desc with defaul style instead of replacing
	it.

	* gtk/gtkrc.c (gtk_rc_style_real_merge): Allow partial
	font descriptions in RC styles by calling
	pango_font_description_merge(). 

2001-12-24  James Henstridge  <james@daa.com.au>

	* gtk/gtkdialog.h (doc comment): s/<!>/<!-- -->/ to make the doc
	valid with both SGML and XML.

Sat Dec 22 12:38:03 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: 1.3.12, interface, binary age 0.

	* configure.in: Require new versions of Glib, Pango, ATK.

	* NEWS: Updated.

	* configure.in: Make explicit what libtool we are executing.
	(Tomas Ogren)

	* gdk/gdkcolor.c gdk/gdkgc.c gdk/gdkwindow.c: Doc fixes.

	* gtk/gtkwidget.c (gtk_widget_[class]path) gtkrc.h : Fix 
	parameter names for docs.

Sat Dec 22 22:35:29 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_realize) 
	  gtk/gtkplug.c (gtk_plug_realize): Include GDK_KEY_RELEASE_MASK.

	* gtk/gtkentry.c (gtk_entry_key_release)
	  gtk/gtktextview.c (gtk_text_view_key_release_event): Pass
	key release events to the input method.
